# billdb

./: .gitignore  Dockerfile  README.md  app.py  bill.py  docker-compose.yml  gunicorn_config.py  parse-qr-to-text.py  pyproject.toml  setup.py  test.py
api/: Dockerfile  app.py  docker-compose.yml
billdb/: __init__.py  _bill.py  _item.py  _template.py  helpers.py
billdb-cplusplus/: a.out  main.cpp  sqlite3.h
billdb-cplusplus/bld/: Makefile  config.status  libtool  mksourceid
billdb/_parsers/: _serbia.py
billdb/_utils/: html.py
cli/: billcli.py
ios_shortcuts/: qr_to_sql.shortcut
telegram_bot/: Dockerfile  _telegram-bot.py  docker-compose.yml  telegram-bot.py
tests/: test_parser.py
